# backend

./: .cursorrules  .gitignore  .replit  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  SYNTAX_ERRORS_TRACKING.md  alembic.ini  branching.md  config.py  database.py  docker-compose.yml  gunicorn.conf.py  main.py  prompt.md  pyproject.toml  pytest.ini  redis.conf  replit.md  requirements.txt  run_tests.py  setup.md  task.md  tasks.md  test.md  to know.md  validate_fixes.py  verify_deployment.py
alembic/: env.py
app/: __init__.py
attached_assets/: BATCH PROCESSING_1756747922909.txt  Final Prompt_1756729725749.md  Improvemnts_1756747417117.txt  MyTypist Development and Backend Implementation Prompt overview_1756729725751.txt  MyTypist Offical Summary_1756729725753.docx  Pasted--site-url-is-mytypist-net-and-make-sure-all-these-updates-are-documented-note-that-some-of-the-1757459777235_1757459777239.txt  Stage 1 PRODUCT_REQUIREMENTS_DOCUMENT_1756729725757.md  Stage 2 TECH_STACK_DECISION_1756729725758.md  Stage 3 DB_SCHEMA_1756729725759.md  Stage 4 Backend Development_1756729725761.md  Stage 5 Frontend Development_1756729725762.md  Strong Optimization & Implementation Sample_1756729919915.md  backend_1756729725747.md  frontend_1756729725750.md  propmt_1756729725754.txt
docs/: 01_Architecture.md  01_Getting_Started.md  02_API_Documentation.md  03_Integration_Guide.md  04_Payment_Integration.md  05_Development_Deployment.md  07_Environment_Setup.md  API_DOCUMENTATION.md  COMPREHENSIVE_AUDIT_REPORT.md  DATABASE_CONFIGURATION.md  DEVELOPMENT.md  ENHANCEMENT_SUMMARY.md  FIXES_APPLIED.md  (+11 more)
(+195 files in other folders)
