[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.5",
    "celery>=5.5.3",
    "cryptography>=45.0.7",
    "fastapi>=0.116.1",
    "geoip2>=5.1.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "pydantic>=2.11.7",
    "python-dateutil>=2.9.0.post0",
    "python-docx>=1.1.2",
    "python-jose[cryptography]>=3.5.0",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.20",
    "redis>=6.4.0",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
    "email-validator>=2.3.0",
    "sendgrid>=6.12.4",
    "uvloop>=0.21.0",
    "gunicorn>=23.0.0",
    "psutil>=7.0.0",
    "httpx>=0.28.1",
    "numpy>=2.3.2",
    "aiofiles>=24.1.0",
    "pillow>=11.3.0",
    "opencv-python>=4.11.0.86",
    "pytesseract>=0.3.13",
    "pdf2image>=1.17.0",
    "scipy>=1.16.1",
    "jinja2>=3.1.6",
    "docx2pdf>=0.1.8",
    "PyPDF2>=3.0.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.1",
    "pyotp>=2.9.0",
    "qrcode[pil]>=7.4.2",
    "cryptography>=42.0.0",
    "python-magic>=0.4.27",
    "passlib[bcrypt]>=1.7.4",
    "reportlab>=4.0.0",
    "weasyprint>=60.0.0",
    "PyMuPDF>=1.23.0",
    "pyjwt>=2.10.1",
    "maxminddb>=2.8.2",
]
